Implemented Characters Details Screen functionality to display character details like name, birth year, height, homeworld, species and movie details

--- a/app/src/main/res/layout/character_details.xml
+++ b/app/src/main/res/layout/character_details.xml
@@ -3,54 +3,70 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+
+        <variable
+            name="character"
+            type="ankit.com.starwarssample.model.CharacterPresentationModel" />
+
+        <variable
+            name="viewModel"
+            type="ankit.com.starwarssample.view.CharacterDetailsViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/tv_name"
-            android:layout_width="0dp"
+            android:id="@+id/tv_character_details"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dp16"
             android:layout_marginTop="@dimen/dp16"
+            android:text="@string/character_details"
+            android:textSize="@dimen/sp20"
             android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/tv_name_value"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="Name" />
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dp16"
+            android:text="@string/name"
+            app:layout_constraintEnd_toStartOf="@+id/tv_name_value"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_character_details"
+            tools:text="Name :" />
 
         <TextView
             android:id="@+id/tv_name_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp16"
-            android:layout_marginEnd="@dimen/dp16"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
+            android:layout_marginStart="@dimen/dp8"
+            android:text="@{character.name}"
             app:layout_constraintStart_toEndOf="@+id/tv_name"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_character_details"
             tools:text="Luke SkyWalker" />
 
         <TextView
             android:id="@+id/tv_birth_year"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dp16"
-            android:layout_marginTop="@dimen/dp16"
-            app:layout_constraintHorizontal_bias="0.5"
+            android:text="@string/birth_year"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_name"
-            tools:text="Birth Year" />
+            tools:text="Birth Year :" />
 
         <TextView
             android:id="@+id/tv_birth_year_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp16"
-            android:layout_marginEnd="@dimen/dp16"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
+            android:layout_marginStart="@dimen/dp8"
+            android:text="@{character.birth_year}"
             app:layout_constraintStart_toEndOf="@+id/tv_birth_year"
             app:layout_constraintTop_toBottomOf="@+id/tv_name_value"
             tools:text="72BBY" />
@@ -60,69 +76,20 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dp16"
-            android:layout_marginTop="@dimen/dp16"
-            app:layout_constraintHorizontal_bias="0.5"
+            android:text="@string/height"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_birth_year"
-            tools:text="Height" />
+            tools:text="Height :" />
 
         <TextView
             android:id="@+id/tv_height_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp16"
-            android:layout_marginEnd="@dimen/dp16"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
+            android:layout_marginStart="@dimen/dp8"
+            android:text="@{character.height}"
             app:layout_constraintStart_toEndOf="@+id/tv_height"
             app:layout_constraintTop_toBottomOf="@+id/tv_birth_year_value"
             tools:text="163cm" />
-
-        <TextView
-            android:id="@+id/tv_species"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dp16"
-            android:layout_marginTop="@dimen/dp16"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_height"
-            tools:text="Species" />
-
-        <TextView
-            android:id="@+id/tv_species_value"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp16"
-            android:layout_marginEnd="@dimen/dp16"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/tv_species"
-            app:layout_constraintTop_toBottomOf="@+id/tv_height_value"
-            tools:text="Jabba the hut" />
-
-        <TextView
-            android:id="@+id/tv_language"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dp16"
-            android:layout_marginTop="@dimen/dp16"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_species"
-            tools:text="Language" />
-
-        <TextView
-            android:id="@+id/tv_language_value"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp16"
-            android:layout_marginEnd="@dimen/dp16"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/tv_language"
-            app:layout_constraintTop_toBottomOf="@+id/tv_species_value"
-            tools:text="Jabba the hut" />
 
         <TextView
             android:id="@+id/tv_homeworld"
@@ -130,21 +97,32 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dp16"
             android:layout_marginTop="@dimen/dp16"
+            android:text="@string/home_world"
+            android:textSize="@dimen/sp20"
+            android:textStyle="bold"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_language"
+            app:layout_constraintTop_toBottomOf="@+id/tv_height"
             tools:text="Home World" />
+
+        <TextView
+            android:id="@+id/tv_homeworld_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dp16"
+            android:text="@string/name"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_homeworld"
+            tools:text="Name :" />
 
         <TextView
             android:id="@+id/tv_homeworld_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp16"
-            android:layout_marginEnd="@dimen/dp16"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/tv_language"
-            app:layout_constraintTop_toBottomOf="@+id/tv_language_value"
+            android:layout_marginStart="@dimen/dp8"
+            android:text="@{viewModel.planet.name}"
+            app:layout_constraintStart_toEndOf="@+id/tv_homeworld_name"
+            app:layout_constraintTop_toBottomOf="@+id/tv_homeworld"
             tools:text="Tatooine" />
 
         <TextView
@@ -152,47 +130,65 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dp16"
-            android:layout_marginTop="@dimen/dp16"
-            app:layout_constraintHorizontal_bias="0.5"
+            android:text="@string/population"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_homeworld"
-            tools:text="Population" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_homeworld_name"
+            tools:text="Population :" />
 
         <TextView
             android:id="@+id/tv_population_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp16"
-            android:layout_marginEnd="@dimen/dp16"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/tv_language"
+            android:layout_marginStart="@dimen/dp8"
+            android:text="@{viewModel.planet.population}"
+            app:layout_constraintStart_toEndOf="@+id/tv_population"
             app:layout_constraintTop_toBottomOf="@+id/tv_homeworld_value"
             tools:text="2000000" />
 
+
         <TextView
-            android:id="@+id/tv_films"
+            android:id="@+id/tv_species"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dp16"
             android:layout_marginTop="@dimen/dp16"
-            app:layout_constraintHorizontal_bias="0.5"
+            android:text="@string/species"
+            android:textSize="@dimen/sp20"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_population"
-            tools:text="Films" />
+            tools:text="Species" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_species"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp8"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintTop_toBottomOf="@+id/tv_species" />
 
         <TextView
-            android:id="@+id/tv_films_value"
-            android:layout_width="wrap_content"
+            android:id="@+id/tv_movies"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dp16"
             android:layout_marginTop="@dimen/dp16"
-            android:layout_marginEnd="@dimen/dp16"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/tv_language"
-            app:layout_constraintTop_toBottomOf="@+id/tv_population_value"
-            tools:text="2000000" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/rv_species"
+            android:textStyle="bold"
+            android:textSize="@dimen/sp20"
+            android:text="@string/movies"
+            tools:text="Movies"/>
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_movies"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/tv_movies"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintStart_toStartOf="parent"
+            android:orientation="horizontal"
+            android:layout_marginTop="@dimen/dp8"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
