--- a/app/src/main/res/layout/character_details.xml
+++ b/app/src/main/res/layout/character_details.xml
@@ -1,18 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:bind="http://schemas.android.com/apk/res-auto">
 
     <data>
 
         <variable
-            name="character"
+            name="characterModel"
             type="ankit.com.starwarssample.model.CharacterPresentationModel" />
 
         <variable
-            name="viewModel"
-            type="ankit.com.starwarssample.view.CharacterDetailsViewModel" />
+            name="characterDetailViewModel"
+            type="ankit.com.starwarssample.view.characterdetails.CharacterDetailsViewModel" />
     </data>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -30,66 +35,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tv_name"
-            android:layout_width="wrap_content"
+        <include
+            android:id="@+id/personal_details_layout"
+            layout="@layout/personal_details"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dp16"
-            android:text="@string/name"
-            app:layout_constraintEnd_toStartOf="@+id/tv_name_value"
+            android:layout_marginEnd="@dimen/dp16"
+            android:layout_marginTop="@dimen/dp8"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_character_details"
-            tools:text="Name :" />
-
-        <TextView
-            android:id="@+id/tv_name_value"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dp8"
-            android:text="@{character.name}"
-            app:layout_constraintStart_toEndOf="@+id/tv_name"
-            app:layout_constraintTop_toBottomOf="@+id/tv_character_details"
-            tools:text="Luke SkyWalker" />
-
-        <TextView
-            android:id="@+id/tv_birth_year"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dp16"
-            android:text="@string/birth_year"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_name"
-            tools:text="Birth Year :" />
-
-        <TextView
-            android:id="@+id/tv_birth_year_value"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dp8"
-            android:text="@{character.birth_year}"
-            app:layout_constraintStart_toEndOf="@+id/tv_birth_year"
-            app:layout_constraintTop_toBottomOf="@+id/tv_name_value"
-            tools:text="72BBY" />
-
-        <TextView
-            android:id="@+id/tv_height"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dp16"
-            android:text="@string/height"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_birth_year"
-            tools:text="Height :" />
-
-        <TextView
-            android:id="@+id/tv_height_value"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dp8"
-            android:text="@{character.height}"
-            app:layout_constraintStart_toEndOf="@+id/tv_height"
-            app:layout_constraintTop_toBottomOf="@+id/tv_birth_year_value"
-            tools:text="163cm" />
+            bind:character="@{characterModel}"/>
 
         <TextView
             android:id="@+id/tv_homeworld"
@@ -102,49 +58,20 @@
             android:textStyle="bold"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_height"
+            app:layout_constraintTop_toBottomOf="@+id/personal_details_layout"
             tools:text="Home World" />
 
-        <TextView
-            android:id="@+id/tv_homeworld_name"
-            android:layout_width="0dp"
+        <include
+            android:id="@+id/home_world_details_layout"
+            layout="@layout/home_world_details"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dp16"
-            android:text="@string/name"
+            android:layout_marginEnd="@dimen/dp16"
+            android:layout_marginTop="@dimen/dp8"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_homeworld"
-            tools:text="Name :" />
-
-        <TextView
-            android:id="@+id/tv_homeworld_value"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dp8"
-            android:text="@{viewModel.planet.name}"
-            app:layout_constraintStart_toEndOf="@+id/tv_homeworld_name"
-            app:layout_constraintTop_toBottomOf="@+id/tv_homeworld"
-            tools:text="Tatooine" />
-
-        <TextView
-            android:id="@+id/tv_population"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dp16"
-            android:text="@string/population"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_homeworld_name"
-            tools:text="Population :" />
-
-        <TextView
-            android:id="@+id/tv_population_value"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dp8"
-            android:text="@{viewModel.planet.population}"
-            app:layout_constraintStart_toEndOf="@+id/tv_population"
-            app:layout_constraintTop_toBottomOf="@+id/tv_homeworld_value"
-            tools:text="2000000" />
-
+            bind:viewModel="@{characterDetailViewModel}"/>
 
         <TextView
             android:id="@+id/tv_species"
@@ -156,14 +83,13 @@
             android:textSize="@dimen/sp20"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_population"
+            app:layout_constraintTop_toBottomOf="@+id/home_world_details_layout"
             tools:text="Species" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_species"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp8"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintTop_toBottomOf="@+id/tv_species" />
 
@@ -183,12 +109,13 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_movies"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_movies"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintStart_toStartOf="parent"
             android:orientation="horizontal"
-            android:layout_marginTop="@dimen/dp8"/>
+            android:layout_marginBottom="@dimen/dp8"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 </layout>
