--- a/app/src/main/res/layout/characters_list_item.xml
+++ b/app/src/main/res/layout/characters_list_item.xml
@@ -21,7 +21,7 @@
             android:padding="16dp"
             android:text="@{character.name}"
             android:textColor="@android:color/black"
-            android:textSize="16sp"
+            android:textSize="@dimen/sp20"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
