--- a/app/src/main/res/layout/home_world_details.xml
+++ b/app/src/main/res/layout/home_world_details.xml
@@ -5,67 +5,66 @@
 
     <data >
         <variable
-            name="species"
-            type="ankit.com.starwarssample.model.SpeciesPresentationModel" />
+            name="viewModel"
+            type="ankit.com.starwarssample.view.characterdetails.CharacterDetailsViewModel" />
     </data>
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardElevation="@dimen/card_elevation"
         android:layout_marginTop="@dimen/card_side_margin"
         android:layout_marginStart="@dimen/card_side_margin"
         android:layout_marginEnd="@dimen/card_side_margin"
         android:layout_marginBottom="@dimen/card_bottom_margin"
+        app:cardElevation="@dimen/card_elevation"
         app:cardPreventCornerOverlap="false">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginStart="@dimen/dp16"
-        android:layout_marginEnd="@dimen/dp16"
+        android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp8"
         android:layout_marginBottom="@dimen/dp8">
 
         <TextView
-            android:id="@+id/tv_species_name"
-            android:layout_width="wrap_content"
+            android:id="@+id/tv_homeworld_name"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="@dimen/dp16"
             android:text="@string/name"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_homeworld"
             tools:text="Name :" />
 
         <TextView
-            android:id="@+id/tv_species_value"
+            android:id="@+id/tv_homeworld_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dp8"
-            app:layout_constraintStart_toEndOf="@+id/tv_species_name"
-            app:layout_constraintTop_toTopOf="parent"
-            android:text="@{species.name}"
-            tools:text="Wookie" />
+            android:text="@{viewModel.planet.name}"
+            app:layout_constraintStart_toEndOf="@+id/tv_homeworld_name"
+            app:layout_constraintTop_toBottomOf="@+id/tv_homeworld"
+            tools:text="Tatooine" />
 
         <TextView
-            android:id="@+id/tv_language"
-            android:layout_width="wrap_content"
+            android:id="@+id/tv_population"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dp16"
+            android:text="@string/population"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_species_name"
-            android:text="@string/language"
-            tools:text="Language :" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_homeworld_name"
+            tools:text="Population :" />
 
         <TextView
-            android:id="@+id/tv_language_value"
+            android:id="@+id/tv_population_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dp8"
-            app:layout_constraintStart_toEndOf="@+id/tv_language"
-            app:layout_constraintTop_toBottomOf="@+id/tv_species_value"
-            android:text="@{species.language}"
-            tools:text="Shyriiwook" />
+            android:text="@{viewModel.planet.population}"
+            app:layout_constraintStart_toEndOf="@+id/tv_population"
+            app:layout_constraintTop_toBottomOf="@+id/tv_homeworld_value"
+            tools:text="2000000" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
     </androidx.cardview.widget.CardView>
 </layout>
